[gd_scene load_steps=12 format=2]

[ext_resource path="res://worlds/paintWorld/especialRooms/colliseun/colliseun.gd" type="Script" id=1]
[ext_resource path="res://entities/enemies/minibosses/metaint/metaint.tscn" type="PackedScene" id=2]
[ext_resource path="res://worlds/paintWorld/tilesets/colliseu.tres" type="TileSet" id=3]
[ext_resource path="res://entities/classes/dialogComponent/dialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/enemies/minibosses/metaint/sprites/metaintReaction.pxo" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36, 240 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36, 240 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 36, 88 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 232 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1056, -240 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StaticBody2D/CollisionShape2D3:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "cutscene"
length = 5.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 3.1 ),
"transitions": PoolRealArray( 0.466517, 0.757858, 1 ),
"update": 0,
"values": [ Vector2( 1347.13, -160 ), Vector2( 1347.13, -160 ), Vector2( 448, -160 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StaticBody2D/CollisionShape2D3:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("metaint")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "THREAD" ],
"method": "changeState"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("metaint:active")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "interact"
} ]
}

[node name="colliseu2" type="Node2D"]
script = ExtResource( 1 )

[node name="colliseuDown" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
z_index = -2
z_as_relative = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 128, 160 )
format = 1
tile_data = PoolIntArray( -720871, 0, 0, -65536, 0, 0, -65535, 0, 1, -65534, 0, 2, -65533, 0, 2, -65532, 0, 3, -65531, 0, 4 )

[node name="colliseuUp" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
z_index = 1
z_as_relative = false
tile_set = ExtResource( 3 )
cell_size = Vector2( 128, 160 )
format = 1
tile_data = PoolIntArray( -458730, 0, 3, -65536, 0, 5, -65531, 0, 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 36, -416 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1500, -416 )
shape = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1556, -88 )
shape = SubResource( 4 )
disabled = true

[node name="metaint" parent="." instance=ExtResource( 2 )]
position = Vector2( 448, 0 )
z_as_relative = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1056, 0 )
collision_layer = 1024
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -32, -232 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1056, -240 )
limit_left = 208
limit_top = -1136
limit_right = 1840
limit_bottom = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/cutscene = SubResource( 7 )

[node name="dialog" parent="." instance=ExtResource( 4 )]
images = [ ExtResource( 5 ) ]

[connection signal="defeated" from="metaint" to="." method="_on_metaint_defeated"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="dialogClosed" from="dialog" to="." method="_on_cutscene_finished"]
